tests/init/neg/secondary-ctor4.check
-- Error: tests/init/neg/secondary-ctor4.scala:54:14 -------------------------------------------------------------------
54 |      val c = new C(b, 5)   // error
   |              ^^^^^^^^^^^
   |              Unsafe leaking of uninitialized value: the leaked value is used.  Calling trace:
   |              -> class N(d: D) extends M(d) {	[ secondary-ctor4.scala:59 ]
   |                 ^
   |              -> def this(d: D) = {	[ secondary-ctor4.scala:7 ]
   |                 ^
   |              -> new A(new B(new D))  // error	[ secondary-ctor4.scala:42 ]
   |                             ^^^^^
   |              -> class D {	[ secondary-ctor4.scala:52 ]
   |                 ^
   |              -> val c = new C(b, 5)   // error	[ secondary-ctor4.scala:54 ]
   |                         ^^^^^^^^^^^
   |
   |              The leaked uninitialized value is used as follows:
   |              -> def this(b: B, x: Int) = this(b)	[ secondary-ctor4.scala:49 ]
   |                                          ^^^^^^^
   |              -> class C(b: B) extends A(b) with T {	[ secondary-ctor4.scala:48 ]
   |                 ^
   |              -> def this(b: B) = {	[ secondary-ctor4.scala:17 ]
   |                 ^
   |              -> Inner().foo()	[ secondary-ctor4.scala:26 ]
   |                 ^^^^^^^
   |              -> class Inner() {	[ secondary-ctor4.scala:21 ]
   |                 ^
   |              -> println(b.n)	[ secondary-ctor4.scala:23 ]
   |                         ^^^
-- Error: tests/init/neg/secondary-ctor4.scala:42:4 --------------------------------------------------------------------
42 |    new A(new B(new D))  // error
   |    ^^^^^^^^^^^^^^^^^^^
   |    Unsafe leaking of uninitialized value: the leaked value is used.  Calling trace:
   |    -> class N(d: D) extends M(d) {	[ secondary-ctor4.scala:59 ]
   |       ^
   |    -> def this(d: D) = {	[ secondary-ctor4.scala:7 ]
   |       ^
   |    -> new A(new B(new D))  // error	[ secondary-ctor4.scala:42 ]
   |       ^^^^^^^^^^^^^^^^^^^
   |
   |    The leaked uninitialized value is used as follows:
   |    -> def this(b: B) = {	[ secondary-ctor4.scala:17 ]
   |       ^
   |    -> Inner().foo()	[ secondary-ctor4.scala:26 ]
   |       ^^^^^^^
   |    -> class Inner() {	[ secondary-ctor4.scala:21 ]
   |       ^
   |    -> println(b.n)	[ secondary-ctor4.scala:23 ]
   |               ^^^
